fix search input

--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -10,8 +10,8 @@
             <a href="{{ site.github.url }}/start/" class="btn btn--subtle m-l-2">Documentation</a>
             <a href="{{ site.github.zip_url }}" class="btn btn--primary m-l-2">Download</a>
         {% else %}
-            <form class="w-22 m--w-30 d-inlineblock pos-relative">
-                <input id="docsearch-input" class="input--rounded" type="search" autocomplete="off" />
+            <form class="pos-relative">
+                <input id="docsearch-input" class="w-20 m--w-30 input--rounded" type="search" autocomplete="off" />
             </form>
             <a href="#menu" class="btn btn--subtle m-l-2 l--hidden" yoi-action="ScrollTo:#menu;">
                 <span class="hidden">Menu</span>
