--- a/src/components/form/textinputs.less
+++ b/src/components/form/textinputs.less
@@ -20,6 +20,7 @@ textarea {
     box-shadow: 0 1px 0 @color-base-24 inset;
     box-sizing: border-box;
     color: @color-base-8;
+    display: inline-block;
     font: normal 1.3rem/2.5rem @font-sansserif;
     height: 2.5rem;
     padding: 0 .5rem;
@@ -197,7 +198,7 @@ textarea {
         box-shadow: none;
         cursor: default;
     }
-    
+
     &[required] {}
 
 }
