polish docs start page

--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -8,7 +8,7 @@
     <p class="flx-grow al-r fs-0">
         {% if page.title == 'Index' %}
             <a href="{{ site.github.url }}/start/" class="btn btn--subtle m-l-2">Documentation</a>
-            <a href="{{ site.github.zip_url }}" class="btn btn--primary m-l-2">Download</a>
+            <a href="{{ site.github.zip_url }}" class="btn btn--flat m-l-2">Download</a>
         {% else %}
             <form class="pos-relative">
                 <input id="docsearch-input" class="w-20 m--w-30 input--rounded" type="search" autocomplete="off" />
