fix focus styles

--- a/src/less/utilities/interface.less
+++ b/src/less/utilities/interface.less
@@ -25,3 +25,7 @@
 .focus          { .mixin-defaultFocus !important; }
 .tabFocus       { .mixin-tabFocus !important; }
 .tabFocus-inset { .mixin-tabFocus-inset !important; }
+
+:focus {
+    .mixin-defaultFocus;
+}
