--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -11,7 +11,7 @@
             <a href="{{ site.github.zip_url }}" class="btn btn--flat m-l-2">Download</a>
         {% else %}
             <form class="pos-relative">
-                <input id="docsearch-input" class="w-20 m--w-30 input--rounded" type="search" autocomplete="off" />
+                <input id="docsearch-input" class="w-18 m--w-30 input--rounded z-200" type="search" autocomplete="off" />
             </form>
             <a href="#menu" class="btn btn--subtle m-l-2 l--hidden" yoi-action="ScrollTo:#menu;">
                 <span class="hidden">Menu</span>
