update color vars, update documentation

--- a/src/less/config/colors.less
+++ b/src/less/config/colors.less
@@ -7,12 +7,13 @@
 @bodyBackgroundColor : @color-white;
 @textColor           : @color-base-8;
 @focusColor          : @blue-22;
+@selectionColor      : fade(@color-primary-25, 50%);
 
 // color scheme
 // ============
 
 // "base" color                         "primary" color
-                                        
+
 @color-base-1:  @gray-1;                @color-primary-1:  @purple-1;
 @color-base-2:  @gray-2;                @color-primary-2:  @purple-2;
 @color-base-3:  @gray-3;                @color-primary-3:  @purple-3;
@@ -40,7 +41,7 @@
 @color-base-25: @gray-25;               @color-primary-25: @purple-25;
 
 // "attention" color                   "negative" color                     "positive" color
-        
+
 @color-attention-1:  @yellow-1;         @color-negative-1:  @red-1;         @color-positive-1:  @green-1;
 @color-attention-2:  @yellow-2;         @color-negative-2:  @red-2;         @color-positive-2:  @green-2;
 @color-attention-3:  @yellow-3;         @color-negative-3:  @red-3;         @color-positive-3:  @green-3;
