--- a/src/less/core/root.less
+++ b/src/less/core/root.less
@@ -22,6 +22,6 @@ body {
 // text selection
 
 ::selection {
-    background: fade(@color-primary-25, 50%);
+    background: @selectionColor;
     color: inherit;
 }
