--- a/src/less/config/typography.less
+++ b/src/less/config/typography.less
@@ -83,29 +83,51 @@
 // ==========
 
 .mixin-fs-0() { font-size: 0; }
-.mixin-fs-1() { font-size: 1rem; }
-.mixin-fs-2() { font-size: 1.5rem; }
-.mixin-fs-3() { font-size: 2rem; }
-.mixin-fs-4() { font-size: 2.5rem; }
-.mixin-fs-5() { font-size: 3rem; }
-.mixin-fs-6() { font-size: 3.5rem; }
-.mixin-fs-7() { font-size: 4rem; }
-.mixin-fs-8() { font-size: 4.5rem; }
-.mixin-fs-9() { font-size: 5rem; }
+.mixin-fs-1() { font-size: 1 * @rootFontSize; }
+.mixin-fs-2() { font-size: 1.5 * @rootFontSize; }
+.mixin-fs-3() { font-size: 2 * @rootFontSize; }
+.mixin-fs-4() { font-size: 2.5 * @rootFontSize; }
+.mixin-fs-5() { font-size: 3 * @rootFontSize; }
+.mixin-fs-6() { font-size: 3.5 * @rootFontSize; }
+.mixin-fs-7() { font-size: 4 * @rootFontSize; }
+.mixin-fs-8() { font-size: 4.5 * @rootFontSize; }
+.mixin-fs-9() { font-size: 5 * @rootFontSize; }
+.mixin-fs-10() { font-size: 5.5 * @rootFontSize; }
+.mixin-fs-11() { font-size: 6 * @rootFontSize; }
+.mixin-fs-12() { font-size: 6.5 * @rootFontSize; }
+.mixin-fs-13() { font-size: 7 * @rootFontSize; }
+.mixin-fs-14() { font-size: 7.5 * @rootFontSize; }
+.mixin-fs-15() { font-size: 8 * @rootFontSize; }
+.mixin-fs-16() { font-size: 8.5 * @rootFontSize; }
+.mixin-fs-17() { font-size: 9 * @rootFontSize; }
+.mixin-fs-18() { font-size: 9.5 * @rootFontSize; }
+.mixin-fs-19() { font-size: 10 * @rootFontSize; }
+.mixin-fs-20() { font-size: 10.5 * @rootFontSize; }
 
 // line heights
 // ============
 
 .mixin-lh-0() { line-height: 0; }
-.mixin-lh-1() { line-height: 1rem; }
-.mixin-lh-2() { line-height: 1.5rem; }
-.mixin-lh-3() { line-height: 2rem; }
-.mixin-lh-4() { line-height: 2.5rem; }
-.mixin-lh-5() { line-height: 3rem; }
-.mixin-lh-6() { line-height: 3.5rem; }
-.mixin-lh-7() { line-height: 4rem; }
-.mixin-lh-8() { line-height: 4.5rem; }
-.mixin-lh-9() { line-height: 5rem; }
+.mixin-lh-1() { line-height: 1 * @rootFontSize; }
+.mixin-lh-2() { line-height: 1.5 * @rootFontSize; }
+.mixin-lh-3() { line-height: 2 * @rootFontSize; }
+.mixin-lh-4() { line-height: 2.5 * @rootFontSize; }
+.mixin-lh-5() { line-height: 3 * @rootFontSize; }
+.mixin-lh-6() { line-height: 3.5 * @rootFontSize; }
+.mixin-lh-7() { line-height: 4 * @rootFontSize; }
+.mixin-lh-8() { line-height: 4.5 * @rootFontSize; }
+.mixin-lh-9() { line-height: 5 * @rootFontSize; }
+.mixin-lh-10() { line-height: 5.5 * @rootFontSize; }
+.mixin-lh-11() { line-height: 6 * @rootFontSize; }
+.mixin-lh-12() { line-height: 6.5 * @rootFontSize; }
+.mixin-lh-13() { line-height: 7 * @rootFontSize; }
+.mixin-lh-14() { line-height: 7.5 * @rootFontSize; }
+.mixin-lh-15() { line-height: 8 * @rootFontSize; }
+.mixin-lh-16() { line-height: 8.5 * @rootFontSize; }
+.mixin-lh-17() { line-height: 9 * @rootFontSize; }
+.mixin-lh-18() { line-height: 9.5 * @rootFontSize; }
+.mixin-lh-19() { line-height: 10 * @rootFontSize; }
+.mixin-lh-20() { line-height: 10.5 * @rootFontSize; }
 
 // letter spacings
 // ===============
@@ -115,36 +137,3 @@
 .mixin-ls-2() { letter-spacing: .2rem; }
 .mixin-ls-3() { letter-spacing: .3rem; }
 .mixin-ls-4() { letter-spacing: .4rem; }
-
-// Responsive Type Scaling
-// =======================
-
-/*
-    Font size globally adjusts to breakpoints.
-    This feature is experimental and disabled by default.
-*/
-
-.mixin-rts() {
-
-    @rts-minViewportWidth : 400;
-    @rts-maxViewportWidth : 800;
-    @rts-minFontSize      : 12;
-    @rts-maxFontSize      : 24;
-
-    :root {
-        font-size: @rts-minFontSize * 1px;
-    }
-
-    @media (min-width: @rts-minVieportWidth * 1px) and (max-width: @rts-maxVieportWidth * 1px) {
-        :root {
-            font-size: calc(@rts-minFontSize * 1px + (@rts-maxFontSize - @rts-minFontSize) * ((100vw - @rts-minVieportWidth * 1px) / (@rts-maxVieportWidth - @rts-minVieportWidth)));
-        }
-    }
-
-    @media (min-width: @rts-maxViewportWidth * 1px) {
-        :root {
-            font-size: @rts-maxFontSize * 1px;
-        }
-    }
-
-}
