adjust typography utilities

--- a/src/less/utilities/typography-base.less
+++ b/src/less/utilities/typography-base.less
@@ -22,16 +22,8 @@
 .fs-8 { .mixin-fs-8 !important; }
 .fs-9 { .mixin-fs-9 !important; }
 .fs-10 { .mixin-fs-10 !important; }
-.fs-11 { .mixin-fs-11 !important; }
-.fs-12 { .mixin-fs-12 !important; }
-.fs-13 { .mixin-fs-13 !important; }
-.fs-14 { .mixin-fs-14 !important; }
-.fs-15 { .mixin-fs-15 !important; }
-.fs-16 { .mixin-fs-16 !important; }
-.fs-17 { .mixin-fs-17 !important; }
-.fs-18 { .mixin-fs-18 !important; }
-.fs-19 { .mixin-fs-19 !important; }
-.fs-20 { .mixin-fs-20 !important; }
+.fs-xl { .mixin-fs-xl !important; }
+.fs-xxl { .mixin-fs-xxl !important; }
 
 // line-height
 
@@ -46,16 +38,6 @@
 .lh-8 { .mixin-lh-8 !important; }
 .lh-9 { .mixin-lh-9 !important; }
 .lh-10 { .mixin-lh-10 !important; }
-.lh-11 { .mixin-lh-11 !important; }
-.lh-12 { .mixin-lh-12 !important; }
-.lh-13 { .mixin-lh-13 !important; }
-.lh-14 { .mixin-lh-14 !important; }
-.lh-15 { .mixin-lh-15 !important; }
-.lh-16 { .mixin-lh-16 !important; }
-.lh-17 { .mixin-lh-17 !important; }
-.lh-18 { .mixin-lh-18 !important; }
-.lh-19 { .mixin-lh-19 !important; }
-.lh-20 { .mixin-lh-20 !important; }
 
 // letter spacing
 
