--- a/src/less/utilities/typography-responsive.less
+++ b/src/less/utilities/typography-responsive.less
@@ -15,16 +15,8 @@
     .@{bpPrefix}--fs-8 { .fs-8; }
     .@{bpPrefix}--fs-9 { .fs-9; }
     .@{bpPrefix}--fs-10 { .fs-10; }
-    .@{bpPrefix}--fs-11 { .fs-11; }
-    .@{bpPrefix}--fs-12 { .fs-12; }
-    .@{bpPrefix}--fs-13 { .fs-13; }
-    .@{bpPrefix}--fs-14 { .fs-14; }
-    .@{bpPrefix}--fs-15 { .fs-15; }
-    .@{bpPrefix}--fs-16 { .fs-16; }
-    .@{bpPrefix}--fs-17 { .fs-17; }
-    .@{bpPrefix}--fs-18 { .fs-18; }
-    .@{bpPrefix}--fs-19 { .fs-19; }
-    .@{bpPrefix}--fs-20 { .fs-20; }
+    .@{bpPrefix}--fs-xl { .fs-xl; }
+    .@{bpPrefix}--fs-xxl { .fs-xxl; }
 
     // line-height
 
@@ -39,16 +31,6 @@
     .@{bpPrefix}--lh-8 { .lh-8; }
     .@{bpPrefix}--lh-9 { .lh-9; }
     .@{bpPrefix}--lh-10 { .lh-10; }
-    .@{bpPrefix}--lh-11 { .lh-11; }
-    .@{bpPrefix}--lh-12 { .lh-12; }
-    .@{bpPrefix}--lh-13 { .lh-13; }
-    .@{bpPrefix}--lh-14 { .lh-14; }
-    .@{bpPrefix}--lh-15 { .lh-15; }
-    .@{bpPrefix}--lh-16 { .lh-16; }
-    .@{bpPrefix}--lh-17 { .lh-17; }
-    .@{bpPrefix}--lh-18 { .lh-18; }
-    .@{bpPrefix}--lh-19 { .lh-19; }
-    .@{bpPrefix}--lh-20 { .lh-20; }
 
     // letter spacing
 
