--- a/src/less/config/typography.less
+++ b/src/less/config/typography.less
@@ -93,16 +93,8 @@
 .mixin-fs-8() { font-size: 4.5 * @rootFontSize; }
 .mixin-fs-9() { font-size: 5 * @rootFontSize; }
 .mixin-fs-10() { font-size: 5.5 * @rootFontSize; }
-.mixin-fs-11() { font-size: 6 * @rootFontSize; }
-.mixin-fs-12() { font-size: 6.5 * @rootFontSize; }
-.mixin-fs-13() { font-size: 7 * @rootFontSize; }
-.mixin-fs-14() { font-size: 7.5 * @rootFontSize; }
-.mixin-fs-15() { font-size: 8 * @rootFontSize; }
-.mixin-fs-16() { font-size: 8.5 * @rootFontSize; }
-.mixin-fs-17() { font-size: 9 * @rootFontSize; }
-.mixin-fs-18() { font-size: 9.5 * @rootFontSize; }
-.mixin-fs-19() { font-size: 10 * @rootFontSize; }
-.mixin-fs-20() { font-size: 10.5 * @rootFontSize; }
+.mixin-fs-xl() { font-size: 15 * @rootFontSize; }
+.mixin-fs-xxl() { font-size: 20 * @rootFontSize; }
 
 // line heights
 // ============
@@ -118,16 +110,6 @@
 .mixin-lh-8() { line-height: 4.5 * @rootFontSize; }
 .mixin-lh-9() { line-height: 5 * @rootFontSize; }
 .mixin-lh-10() { line-height: 5.5 * @rootFontSize; }
-.mixin-lh-11() { line-height: 6 * @rootFontSize; }
-.mixin-lh-12() { line-height: 6.5 * @rootFontSize; }
-.mixin-lh-13() { line-height: 7 * @rootFontSize; }
-.mixin-lh-14() { line-height: 7.5 * @rootFontSize; }
-.mixin-lh-15() { line-height: 8 * @rootFontSize; }
-.mixin-lh-16() { line-height: 8.5 * @rootFontSize; }
-.mixin-lh-17() { line-height: 9 * @rootFontSize; }
-.mixin-lh-18() { line-height: 9.5 * @rootFontSize; }
-.mixin-lh-19() { line-height: 10 * @rootFontSize; }
-.mixin-lh-20() { line-height: 10.5 * @rootFontSize; }
 
 // letter spacings
 // ===============
