--- a/docs/_includes/pagefooter.html
+++ b/docs/_includes/pagefooter.html
@@ -1,13 +1,13 @@
 <footer class="bg-white flx flx-directionColumn m--flx-directionRow c-base-15 p-lr-4 p-t-15 l--p-t-30 p-b-10 m--p-b-4">
     <div class="m--w-1-2 al-c m--al-l">
-        <p class="lh-5">
+        <p class="lh-4">
             <a class="m-r-2 tdr-none hvr--tdr-underline" href="https://github.com/yoshino-digital/yoi">Yoi on GitHub</a>
             <a class="tdr-none hvr--tdr-underline" href="{{ site.github.url }}/start/">Documentation</a>
         </p>
     </div>
     <div class="m--w-1-2 al-c m--al-r">
-        <p class="lh-5">
-            <img class="d-inlineblock h-3 m-r-1 val-t" src="{{ site.github.url }}/assets/img/logo-yoshino-mono.svg" />
+        <p class="d-inlineblock lh-4 pos-relative p-l-8">
+            <img class="d-block h-3 pos-tl m-t-neg-2" src="{{ site.github.url }}/assets/img/logo-yoshino-mono.svg" />
             <span class="val-t">&copy; {{ "now" | date: "%Y" }}</span>
             <a  class="val-t tdr-none hvr--tdr-underline" href="http://yoshino.digital">Yoshino.digital GmbH</a>
         </p>
