--- a/src/less/utilities/shadow-base.less
+++ b/src/less/utilities/shadow-base.less
@@ -2,10 +2,10 @@
 
 // shadow mixins
 
-.mixin-shadow-1 { box-shadow: 0 0 5px  fade(@color-base-15, 30%); }
-.mixin-shadow-2 { box-shadow: 0 0 10px fade(@color-base-15, 30%); }
-.mixin-shadow-3 { box-shadow: 0 0 20px fade(@color-base-15, 30%); }
-.mixin-shadow-4 { box-shadow: 0 0 35px fade(@color-base-15, 30%); }
+.mixin-shadow-1 { box-shadow: 0 0 5px  fade(@color-base-15, 25%); }
+.mixin-shadow-2 { box-shadow: 0 5px 10px fade(@color-base-15, 25%); }
+.mixin-shadow-3 { box-shadow: 0 10px 30px fade(@color-base-15, 25%); }
+.mixin-shadow-4 { box-shadow: 0 15px 50px 0 fade(@color-base-15, 20%); }
 
 // box shadows
 
