--- a/src/less/utilities/layout-base.less
+++ b/src/less/utilities/layout-base.less
@@ -5,6 +5,7 @@
 .d-inline      { display: inline !important; }
 .d-block       { display: block !important; }
 .d-inlineblock { display: inline-block !important; }
+.d-none        { display: none !important; }
 
 // position type
 
