add @linkColor variable

--- a/src/less/config/colors.less
+++ b/src/less/config/colors.less
@@ -8,6 +8,7 @@
 @textColor           : @color-base-8;
 @focusColor          : @blue-22;
 @selectionColor      : fade(@color-primary-25, 50%);
+@linkColor           : @color-primary-12;
 
 // color scheme
 // ============
