--- a/src/less/yoi.less
+++ b/src/less/yoi.less
@@ -14,7 +14,7 @@
 // core
 
 @import "core/debug.less";
-@import "core/mixins.less";
+@import "core/helpers.less";
 @import "core/reset.less";
 @import "core/root.less";
 
