add utility .fs-s

--- a/src/less/config/typography.less
+++ b/src/less/config/typography.less
@@ -103,6 +103,7 @@
 .mixin-fs-8() { font-size: 2.75 * @rootFontSize; }
 .mixin-fs-9() { font-size: 3 * @rootFontSize; }
 .mixin-fs-10() { font-size: 3.25 * @rootFontSize; }
+.mixin-fs-s() { font-size: .8 * @rootFontSize; .mixin-lh-1(); }
 .mixin-fs-xl() { font-size: 5 * @rootFontSize; line-height: 1; }
 .mixin-fs-xxl() { font-size: 15 * @rootFontSize; line-height: 1; }
 
