--- a/src/less/utilities/typography-base.less
+++ b/src/less/utilities/typography-base.less
@@ -22,6 +22,7 @@
 .fs-8 { .mixin-fs-8 !important; }
 .fs-9 { .mixin-fs-9 !important; }
 .fs-10 { .mixin-fs-10 !important; }
+.fs-s { .mixin-fs-s !important; }
 .fs-xl { .mixin-fs-xl !important; }
 .fs-xxl { .mixin-fs-xxl !important; }
 
