add responsive border utility

--- a/src/less/yoi.less
+++ b/src/less/yoi.less
@@ -20,7 +20,8 @@
 
 // utilities
 
-@import "utilities/border.less";
+@import "utilities/border-base.less";
+@import "utilities/border-responsive.less";
 @import "utilities/color-base.less";
 @import "utilities/color-interactive.less";
 @import "utilities/cursor.less";
