default curser on buttons

--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -12,7 +12,7 @@
     border-width: 1px;
     border-style: solid;
     box-sizing: border-box;
-    cursor: pointer;
+    cursor: default;
     display: inline-block;
     font-family: @font-sansserif;
     font-size: 1.2rem;
