fix double-important bug

--- a/src/less/utilities/typography-responsive.less
+++ b/src/less/utilities/typography-responsive.less
@@ -43,13 +43,13 @@
 
     // text alignment
 
-    .@{bpPrefix}--al-r { .al-r !important; }
-    .@{bpPrefix}--al-l { .al-l !important; }
-    .@{bpPrefix}--al-c { .al-c !important; }
+    .@{bpPrefix}--al-r { .al-r; }
+    .@{bpPrefix}--al-l { .al-l; }
+    .@{bpPrefix}--al-c { .al-c; }
 
     // line-break
 
-    .@{bpPrefix}--lbr-none { .lbr-none !important; }
+    .@{bpPrefix}--lbr-none { .lbr-none; }
 
 }
 
