improve custom form elements

--- a/src/components/form/customselect.less
+++ b/src/components/form/customselect.less
@@ -29,7 +29,7 @@
     // inner select element
 
     select {
-        
+
         .mixin-clearAppearance;
         border-radius: 0;
         background: transparent;
@@ -104,4 +104,8 @@
 
 .select.input--focus {
     .mixin-defaultFocus;
+}
+
+.select.input--disabled {
+    .mixin-disabled;
 }
