--- a/src/less/core/helpers.less
+++ b/src/less/core/helpers.less
@@ -96,6 +96,11 @@
 
 // accessabilty
 
+.mixin-disabled() {
+    cursor: default;
+    opacity: .5;
+}
+
 .mixin-defaultFocus() {
     box-shadow: 0 0 0 2px fade(@focusColor,100%);
     border-color: @blue-18;
