ehance scroll observer (add yoi-scroll-slowdown event)

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -73,7 +73,7 @@
             $(function() {
 
                 /**
-                *  To improve accessabilty on small screens, wrap ech documentation
+                *  To improve accessabilty on small screens, wrap each documentation
                 *  table in a scrollable container. We do this via JavaScript
                 *  because an HTML-tag around markdown-tables prevents the markdown
                 *  parser from rendering the tables.
