--- a/src/less/yoi.less
+++ b/src/less/yoi.less
@@ -51,6 +51,6 @@
 // components
 
 /**
- *  Styles for components are added during the build process.
+ *  Imports for components are automatically added during the build process.
  *  See package.json
  */
